--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/react": "^6.1.20",
     "@fullcalendar/timegrid": "^6.1.20",
     "@mui/icons-material": "^7.3.7",
+    "@mui/lab": "^7.0.1-beta.21",
     "@mui/material": "^7.3.7",
     "@mui/x-data-grid": "^8.27.0",
     "@nivo/bar": "^0.99.0",
