--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^7.0.1-beta.21",
     "@mui/material": "^7.3.7",
     "@mui/x-data-grid": "^8.27.0",
+    "@mui/x-date-pickers": "^8.27.0",
     "@nivo/bar": "^0.99.0",
     "@nivo/colors": "^0.99.0",
     "@nivo/core": "^0.99.0",
@@ -28,6 +29,7 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.5",
+    "dayjs": "^1.11.19",
     "firebase": "^12.9.0",
     "formik": "^2.4.9",
     "react": "^19.2.4",
