--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@fullcalendar/list": "^6.1.20",
     "@fullcalendar/react": "^6.1.20",
     "@fullcalendar/timegrid": "^6.1.20",
-    "@mui/icons-material": "^7.3.7",
+    "@mui/icons-material": "^7.3.8",
     "@mui/lab": "^7.0.1-beta.21",
-    "@mui/material": "^7.3.7",
+    "@mui/material": "^7.3.8",
     "@mui/x-data-grid": "^8.27.0",
     "@mui/x-date-pickers": "^8.27.0",
     "@nivo/bar": "^0.99.0",
@@ -32,6 +32,7 @@
     "dayjs": "^1.11.19",
     "firebase": "^12.9.0",
     "formik": "^2.4.9",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-pro-sidebar": "^1.1.0",
